# logic-eval

./: Cargo.toml  README.md  codecov.yml
.github/workflows/: check.yml  safety.yml  test.yml
crates/any-intern/: Cargo.toml  README.md  run.sh
crates/any-intern/benches/: bench.rs
crates/any-intern/src/: any.rs  common.rs  dropless.rs  lib.rs  typed.rs
crates/any-intern/tests-san/: asan.rs  leak.rs  tsan.rs
crates/logic-eval/: Cargo.toml  README.md
crates/logic-eval-util/: Cargo.toml  README.md
crates/logic-eval-util/src/: lib.rs  reference.rs  str.rs  symbol.rs  unique.rs
crates/logic-eval/benches/: candidate_filter.rs  database_build.rs  parse.rs  query.rs  query_threads.rs
crates/logic-eval/benches/common/: mod.rs
crates/logic-eval/examples/: access_control.rs  dependency_graph.rs  meal_recommendation.rs
crates/logic-eval/src/: lib.rs
crates/logic-eval/src/parse/: common.rs  inner.rs  mod.rs  repr.rs  text.rs
crates/logic-eval/src/prove/: canonical.rs  common.rs  db.rs  mod.rs  proof_engine.rs  prover.rs  repr.rs  table.rs
src/: lib.rs
src/parse/: inner.rs  repr.rs
src/prove/: db.rs  mod.rs  prover.rs  repr.rs
