[package]
name = "any-intern"
version = "0.1.4"
edition = "2021"
rust-version = "1.65.0"
description = "An interner for various types"
readme = "README.md"
repository = "https://github.com/ecoricemon/logic-eval"
license = "Apache-2.0 OR MIT"
keywords = ["intern"]

[dependencies]
bumpalo = { workspace = true }
fxhash = { workspace = true }
hashbrown = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench"
harness = false
