[package]
name = "any-intern"
version = "0.1.5"
edition = "2021"
rust-version = "1.65.0"
readme = "README.md"
repository = "https://github.com/ecoricemon/logic-eval"
license = "Apache-2.0 OR MIT"
description = "Flexible value interning with typed, type-erased, and dropless arena storage"
keywords = ["interning", "arena", "deduplication"]

[dependencies]
bumpalo = { workspace = true }
fxhash = { workspace = true }
hashbrown = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench"
harness = false
