[package]
name = "logic-eval-util"
version = "0.1.4"
edition = "2021"
rust-version = "1.65"
description = "utility for logic-eval"
readme = "README.md"
repository = "https://github.com/ecoricemon/logic-eval"
license = "Apache-2.0 OR MIT"

[lib]
crate-type = ["rlib"]

[dependencies]
smallvec = { workspace = true }
fxhash = { workspace = true }
