[package]
name = "logic-eval-util"
version = "0.1.5"
edition = "2021"
rust-version = "1.65.0"
description = "utility for logic-eval"
readme = "README.md"
repository = "https://github.com/ecoricemon/logic-eval"
license = "Apache-2.0 OR MIT"

[dependencies]
smallvec = { workspace = true }
fxhash = { workspace = true }
