[package]
name = "logic-eval-util"
version = "0.1.5"
edition = "2021"
rust-version = "1.65.0"
readme = "README.md"
repository = "https://github.com/ecoricemon/logic-eval"
license = "Apache-2.0 OR MIT"
description = "Utility data structures for logic-eval, including unique containers and scoped symbols"
keywords = ["logic", "utilities"]

[dependencies]
smallvec = { workspace = true }
fxhash = { workspace = true }
