[package]
name = "logic-eval"
version = "0.2.0"
edition = "2021"
rust-version = "1.65.0"
description = "A prolog-like logic evaluator"
readme = "README.md"
repository = "https://github.com/ecoricemon/logic-eval"
license = "Apache-2.0 OR MIT"
keywords = ["logic"]

[dependencies]
any-intern = { workspace = true }
logic-eval-util = { workspace = true }
indexmap = { workspace = true }
fxhash = { workspace = true }
smallvec = { workspace = true }
