[package]
name = "logic-eval"
version = "0.2.0"
edition = "2021"
rust-version = "1.65.0"
readme = "README.md"
repository = "https://github.com/ecoricemon/logic-eval"
license = "Apache-2.0 OR MIT"
description = "A Prolog-like logic evaluation library with parsing, tabling, and query proof search"
keywords = ["logic", "prolog"]

[dependencies]
any-intern = { workspace = true }
logic-eval-util = { workspace = true }
indexmap = { workspace = true }
fxhash = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "query_threads"
harness = false

[[example]]
name = "meal_recommendation"
path = "examples/meal_recommendation.rs"

[[example]]
name = "access_control"
path = "examples/access_control.rs"

[[example]]
name = "dependency_graph"
path = "examples/dependency_graph.rs"
